<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/lightGray"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/button_watched_page"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:layout_marginEnd="20dp"
            android:text="@string/watched"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button_watchlist_page"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:text="@string/watch_list"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@+id/button_watched_page" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView_watched_movie"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:layout_below="@id/button_previous"/>

    <TextView
        android:id="@+id/textView_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_watched_movie"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:textSize="18sp" />


    <ImageButton
        android:id="@+id/button_mark_watched"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_watched"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:layout_below="@id/textView_movie_title"/>

    <Button
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar2"
        android:text="@string/anterior" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toolbar2"
        android:text="@string/siguiente" />

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/lightGray"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/button_home"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_home"
            android:layout_marginStart="80dp"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/button_movies"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_movies"
            android:layout_marginStart="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/button_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_settings"
            android:layout_marginEnd="80dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>
