<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="130dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_fetch"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="16dp" />

    <Button
        android:id="@+id/button_fetch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/fetch_movie"
        android:drawableStart="@drawable/ic_reload"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_above="@id/button_mark_watchlist"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/button_select_genre"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_filter"
        android:scaleType="fitCenter"
        android:layout_alignBottom="@id/button_fetch"
        android:layout_toEndOf="@+id/button_fetch"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/button_mark_watchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watchlist"
        android:drawableTop="@drawable/ic_watchlist"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:layout_above="@id/toolbar"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_mark_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watched"
        android:drawableTop="@drawable/ic_watched"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:layout_above="@id/toolbar"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentEnd="true"/>


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/lightGray"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/button_home"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_home"
            android:layout_marginStart="80dp"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/button_movies"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_movies"
            android:layout_marginStart="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/button_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_settings"
            android:layout_marginEnd="80dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>



</RelativeLayout>
